--- a/style/index.css
+++ b/style/index.css
@@ -1,77 +1,134 @@
 /* http://meyerweb.com/eric/tools/css/reset/ 
+
    v2.0 | 20110126
+
    License: none (public domain)
+
 */
 
 html, body, div, span, applet, object, iframe,
+
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+
 a, abbr, acronym, address, big, cite, code,
+
 del, dfn, em, img, ins, kbd, q, s, samp,
+
 small, strike, strong, sub, sup, tt, var,
+
 b, u, i, center,
+
 dl, dt, dd, ol, ul, li,
+
 fieldset, form, label, legend,
+
 table, caption, tbody, tfoot, thead, tr, th, td,
+
 article, aside, canvas, details, embed, 
+
 figure, figcaption, footer, header, hgroup, 
+
 menu, nav, output, ruby, section, summary,
+
 time, mark, audio, video {
-	margin: 0;
-	padding: 0;
-	border: 0;
-	font-size: 100%;
-	font: inherit;
-	vertical-align: baseline;
+
+    margin: 0;
+    
+    padding: 0;
+    
+    border: 0;
+    
+    font-size: 100%;
+    
+    font: inherit;
+    
+    vertical-align: baseline;
+    
 }
+
 /* HTML5 display-role reset for older browsers */
+
 article, aside, details, figcaption, figure, 
+
 footer, header, hgroup, menu, nav, section {
-	display: block;
+
+    display: block;
+    
 }
+
 body {
-	line-height: 1;
+
+    line-height: 1;
+    
 }
+
 ol, ul {
-	list-style: none;
+
+    list-style: none;
+    
 }
+
 blockquote, q {
-	quotes: none;
+
+    quotes: none;
+    
 }
+
 blockquote:before, blockquote:after,
+
 q:before, q:after {
-	content: '';
-	content: none;
+    content: '';
+    
+    content: none;
+
 }
+
 table {
-	border-collapse: collapse;
-	border-spacing: 0;
+
+    border-collapse: collapse;
+    
+    border-spacing: 0;
+    
 }
 
 * {
+
     box-sizing: border-box;
+
 }
 
 html, body {
+
     height: 100%;
+
     font-family: 'Roboto', sans-serif;
+
 }
 
 h1, h2, h3, h4, h5 {
+
     font-size: 18px;
+
     margin-bottom: 15px;
+
     font-family: 'Rubik', sans-serif;
+
 }
 
 p {
+
     line-height: 1.4;
+
 }
 
 header {
 
     display: flex;
-    justify-content: center;
-    margin: 1%;
-    padding: 1%;
+
+    justify-content: space-evenly;
+
+    align-items: baseline;
+
 }
 
 .logo {
@@ -80,67 +137,100 @@ header {
 
 }
 
-nav {
-    display: flex;
-    
-
-}
-
 nav a {
 
+    justify-content: space-evenly;
+
     text-decoration: none;
+
     color: black;
+
 }
 
 .header-img {
+
     display: flex;
+
     justify-content: center;
+
     margin: 2%;
+
 }
 
 .container {
+
     width: 800px;
+
     margin: 0 auto;
+
 }
 
 .top-content {
+
     display: flex;
+
     flex-wrap: wrap;
+
     justify-content: space-evenly;
+
     margin-bottom: 20px;
+
     border-bottom: 1px dashed black;
+
 }
 
 .top-content .text-container {
+
     width: 48%;
+
     padding: 0 1%;
+
     padding-bottom: 20px;  
+
 }
 
 .middle-content {
+
     margin-bottom: 20px;
+
     border-bottom: 1px dashed black;
+
 }
 
 .middle-content h2 {
+
     padding: 0 2%;
+
     margin-bottom: 0;
+
 }
 
 .middle-content .boxes {
+
     display: flex;
+
     flex-wrap: wrap;
+
     justify-content: space-evenly;
+
 }
 
 .middle-content .boxes .box {
+
     width: 12.5%;
+
     height: 100px;
+
     margin: 20px 2.5%;
+
     color: white;
+
     display: flex;
+
     align-items: center;
+
     justify-content: center;
+
 }
 
 #box1 {
@@ -204,35 +294,165 @@ nav a {
     background-color: dodgerblue ;
     
 }
+
 .bottom-content {
+
     display: flex;
+
     margin: 0 2% 20px;
+
     justify-content: space-around;
+
 }
 
 .bottom-content .text-container {
+
     padding-right: 4%;
+
 }
 
 .bottom-content .text-container:last-child {
+
     padding-right: 0;
+
 }
 
 footer {
+
     width: 100%;
+
     background: black;
+
 }
 
 footer nav {
+
     width: 60%;
+
     display: flex;
+
     justify-content: space-between;
+
     align-items: center;
+
     padding: 20px 2%;
+
     font-size: 14px;
+
 }
 
 footer nav a {
+
     color: white;
+
     text-decoration: none;
+
 }
+
+/*media queries*/
+
+/*max-width: 800px*/
+
+@media (max-width: 800px){
+
+    header {
+
+        flex-direction: column;
+
+        align-items: center;
+
+        justify-content: space-evenly;
+
+    }
+    
+    .logo {
+
+        margin-top: 1%;
+
+    }
+
+    nav {
+
+        margin-top: 1%;;
+
+    }
+
+    .header-img {
+
+        justify-content: center;
+
+    }
+
+    .top-content {
+
+        margin-right: 2%;
+
+    }
+
+    .boxes {
+
+        margin-right: 1%;
+
+    }
+
+}
+
+/*max-width: 500px*/
+
+@media (max-width: 500px) {
+
+    nav a {
+
+        display: flex;
+
+        flex-direction: column;
+
+        border: 1px solid grey;
+        
+    }
+
+    nav .one {
+
+        background-color: lightgrey;
+
+        color: black;
+        
+    }
+
+    .header-img {
+
+        width: 500px;
+
+    }
+
+    .container {
+
+        max-width: 500px;
+
+    }
+
+    .top-content {
+
+        flex-direction: column;
+
+        align-items: baseline;
+
+    }
+    
+    .boxes {
+
+        flex-direction: column;
+
+        align-items: center;
+
+        padding: 5%;
+        
+    }
+
+    #box5, #box6, #box7, #box8, #box9, #box10, .bottom-content, footer {
+
+        display: none;
+
+    }
+
+}    
